@@ -37,3 +37,8 @@
 2013-09-08 22:20 Yao Liu <xuanyao0111@gmail.com>
 -Update codes. The state transition is OK!
  Next add data transimit and parse.
+
+2013-09-09 22:40 Yao Liu <xuanyao0111@gmail.com>
+-Update codes. Add data transimit and parse. But it haven't been tested
+ Finish the baisc function next.
+ Do more optimization.
